--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ftp-deploy:
-    name: Deploy to Stage
+    name: Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_DEV_SITE_KEY }}
         ARGS: "-rlgoDzvc -i --delete"
-        SOURCE: "/wp-content/themes/onco/"
+        SOURCE: "/"
         REMOTE_HOST: ${{ secrets.SSH_DEV_SITE_SERVER }}
         REMOTE_USER: ${{ secrets.SSH_DEV_SITE_USER }}
-        TARGET: "/data/www/dev.fgonko/wp-content/themes/onco/"
+        TARGET: "/data/www/"
